# fraudd

./: MegaFraudDetector9000Plus_risk_assessments.csv  README.md  app.py  pyproject.toml  risk_assessments.csv  run.py  test.txt
application/: ports.py  rules_runner.py  workflow_runner.py
domain/: transaction.py
infrastructure/: config.py  csv_exporter.py  data_loader.py
presentation/: alert_dashboard.py  app.py  data_exploration_dashboard.py  data_quality_dashboard.py  graph_dashboard.py  rules_explanation_panel.py
rules/: base_rule.py  r10_cross_border_anomaly.py  r12_zscore_amount.py  r13_unusual_hour.py  r17_smurfing_structuring.py  r18_round_amounts_anomaly.py  r1_cop_name_mismatch_hard.py  r21_rapid_account_emptying.py  r22_absolute_high_value.py  r24_channel_specific_threshold.py  r6_high_amount_spike.py  r7_high_frequency_transfers.py  r8_new_payees_burst.py
src/: data_loader.py  model.py  rules_runner.py  workflow_runner.py
src/graph/: model.py  (+3 more)
test/: 1.csv  3.INPUT&OUTPUT_FILES_specification.xlsx  4. HACKATHON_FRAML_RULES.xlsx  test_amount_stats_group.py  test_bisect_helpers.py  test_cop_group.py  test_frequency_group.py  test_graph_integration.py  test_r10_cross_border_anomaly.py  test_r12_zscore_amount.py  test_r13_unusual_hour.py  test_r17_smurfing_structuring.py  test_r18_round_amounts_anomaly.py  test_r21_rapid_account_emptying.py  test_r6_high_amount_spike.py  test_r7_high_frequency_transfers.py  test_r8_new_payees_burst.py  test_risk_calculator.py  test_rules.py  test_threshold_group.py  test_workflow_runner.py
transaction/: transaction.py
(+39 files in other folders)
