[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "numpy>=2.4.4",
    "openpyxl>=3.1.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "streamlit-agraph>=0.0.45",
    "xgboost>=3.2.0",
    "neo4j==6.1.0",
    "pytz==2026.1.post1",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    "pydeck==0.9.2",
    "pygments==2.20.0",
    "pytest==9.0.3"
]

[tool.pytest.ini_options]
pythonpath = ["."]